Adaptar procés d'importació de les Unitats #18